<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="190dp"
    android:layout_height="250dp"
    android:layout_marginEnd="18dp"
    app:cardBackgroundColor="@color/surface"
    app:cardCornerRadius="18dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:background="@drawable/fruit_serviceberry_bg">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/fruit_art_serviceberry"
                android:textSize="54sp"/>

            <TextView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_gravity="top|end"
                android:layout_margin="10dp"
                android:background="@drawable/circle_surface"
                android:gravity="center"
                android:text="@string/icon_check"
                android:textColor="@color/leafGreen"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/serviceberry"
            android:textColor="@color/textPrimary"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/serviceberry_scientific"
            android:textColor="@color/textHint"
            android:textSize="13sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/common_location"
            android:textColor="@color/leafGreen"
            android:textSize="13sp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
